Update title and subtitle for clarity

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C-Grader Pro - AI-Powered C Code Evaluation</title>
+    <title>C-Grader Pro - AI-Powered C Code Evaluation for Professors</title>
     <meta name="description" content="Automated C programming exam grading using Google Gemini AI">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -537,7 +537,7 @@
         <header>
             <img src="logo_c-grader-pro_crop.png" alt="C-Grader Pro Logo" class="app-logo">
             <h1>C-Grader Pro</h1>
-            <p class="subtitle">AI-Powered C Programming Exam Evaluation (Gemini 2.0 Flash API)</p>
+            <p class="subtitle">AI-Powered C Programming Exam Evaluation for Professors</p>
             <p style="font-size: 0.9rem; color: var(--text-muted); margin-top: 0.25rem;">RNASA, CITIC, UDC</p>
         </header>
 
